# team-project-24spring-team1

./: .gitignore  Cargo.toml  Dashboard.vue  Design-team1.md  Proposal.md  Proposal_2.md  Proposal_Detail.md  diesel.toml  en.json  package-lock.json  package.json
.github/workflows/: build.yml  deploy.yaml
BackEnd/: Cargo.toml
BackEnd/services/image-hosting/: server.py
BackEnd/src/: error.rs  main.rs
BackEnd/src/controllers/: account.rs  event.rs  metadata.rs  moment.rs
BackEnd/src/orm/: account.rs  event.rs  misc.rs  mod.rs
BackEnd/src/orm/chat/: message.rs
BackEnd/src/orm/utils/: count_ref.rs  functions.rs  logging.rs
BackEnd/src/utils/: page.rs
BackEnd/tests/common/: db.rs  mod.rs  setup.rs
BackEnd/tests/tests/: chat.rs  event.rs  misc.rs  mod.rs
BackEnd/tests/utils/: fake_cas.py
FrontEnd/: Dockerfile  babel.config.js  backendChat.py  backendRegister.py  jest.config.js  package-lock.json  package.json  testBackend.py  vue.config.js
FrontEnd/mock/: user.js
FrontEnd/public/: index.html
FrontEnd/public/events/1/: config.json
FrontEnd/public/events/2/: config.json
FrontEnd/public/events/3/: config.json
FrontEnd/src/: App.vue  main.js
FrontEnd/src/adminform/components/: cardImg.vue  conferTable.vue  dateP.vue  dialogInd.vue  (+3 more)
FrontEnd/src/api/: register.js
FrontEnd/src/components/: BaseRadio.vue
FrontEnd/src/pages/: Chat.vue  Dashboard.vue  Maps.vue  MyEvent.vue  MyMoment.vue  NotFoundPage.vue  Profile.vue  SettingProfile.vue  adminPublish.vue  login.vue  register.vue
FrontEnd/src/plugins/: globalComponents.js  globalDirectives.js
FrontEnd/src/router/: index.js  routes.js  starterRouter.js
Proposal/: Proposal.md
flake/: flake.nix
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-03-30-083214_create_tables/: down.sql  up.sql
services/image-hosting/: Dockerfile  server.py
sprint1/: Design-team1.md
sprint2/: final-report-team1.md  readme.md  readme_for_developer.md
src/: error.rs  lib.rs  main.rs
src/controllers/: account.rs  auth.rs  chat.rs  comment.rs  event.rs  metadata.rs  mod.rs
src/orm/: account.rs  comment.rs  event.rs  misc.rs  mod.rs  moment.rs  moment_comment.rs  schema.rs  utils.rs
src/orm/chat/: member.rs  message.rs  mod.rs
src/orm/utils/: bracket.rs  mod.rs  sql_types.rs  types.rs
src/pages/: Dashboard.vue  MyMoment.vue
src/utils/: auth.rs  mod.rs  page.rs
tests/: test_main.rs
tests/common/: app.rs  setup.rs
tests/tests/: account.rs  auth.rs  chat.rs  event.rs  misc.rs  mod.rs  moment.rs
(+37 files in other folders)
