[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "^0.4.37", features = ["serde"] }
deadpool = "0.9"
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "^0.4.1", features = ["postgres", "deadpool"] }
dotenvy = "^0.15.7"
jsonwebtoken = "9"
lazy_static = "^1.4.0"
log = { version = "0.4", features = [] }
pretty_env_logger = "0.5.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = [] }
#validator = { version = "0.17", features = ["derive"] }
validator = { git = "https://github.com/Keats/validator.git", features = ["derive"] }
