[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
required-features = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
argon2 = { version = "0.5", features = ["std"] }
awc = { version = "^3.4.0", default-features = false, features = ["rustls"] }
byteorder = "^1.5.0"
chrono = { version = "^0.4.37", features = ["serde"] }
clap = { version = "^4.5.4", features = ["derive", "env"], optional = true }
deadpool = "0.9"
diesel = { version = "2.1", features = ["chrono", "uuid"] }
diesel-async = { version = "^0.4.1", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "^2.1.0", features = ["postgres"] }
dotenvy = "^0.15.7"
jsonwebtoken = "9"
mime = "^0.3"
lazy_static = "^1.4.0"
log = { version = "0.4", features = [] }
phf = { version = "0.11", features = ["macros"] }
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
regex = "1"
scoped-futures = "^0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["sync"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
actix-service = "^2.0.2"
actix-http = "^3.6.0"
diesel_async_migrations = "^0.12.0"
tokio = { version = "1.37", features = ["rt", "macros", "sync"] }

[features]
cli = ["clap"]
